<resources>
    <string name="app_name">QRCode Scanner</string>
    <string name="login">Login</string>
    <string name="login_placeholder">Informe seu login</string>
    <string name="password">Senha</string>
    <string name="password_placeholder">Informe sua senha</string>
    <string name="do_login">Entrar</string>
    <string name="title_activity_host">HostActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scanner_title">Scanear QR Code</string>
    <string name="app_title">QRCode Scanner</string>
    <string name="qr_description">QR Code Icon</string>
    <string name="description">Para scanear o QR Code habilite o Scanner no botão e aponte sua câmera para a imagem!</string>
</resources>